--- a/style.css
+++ b/style.css
@@ -55,17 +55,7 @@ aside {
     margin: 10px 20px 5px 20px;
     padding: 10px;
 }
-.skills1 {
-    color: white;
-    margin: 5px 20px 5px 20px;
-    padding: 10px;
-}
-.skills2 {
-    color: white;
-    margin: 5px 20px 5px 20px;
-    padding: 10px;
-}
-.skills3 {
+.skills {
     color: white;
     margin: 5px 20px 5px 20px;
     padding: 10px;
@@ -75,6 +65,9 @@ aside {
 .title {
     margin: 20px 40px 20px 40px;
     padding: 10px;
+
+    font-weight: 700;
+    font-style: bold;
 }
 .about {
     margin: 10px 40px 10px 40px;
